Moved stylization from HTML to CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,10 @@ h1, h2 {
     font-weight: normal;
 }
 
+#welcome-container {
+    position: relative;
+}
+
 .neon-btn {
     background-color: transparent;
     border: 2px solid #00ff00;
